--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,17 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 @import "tailwindcss";
 
-body{
-  font-family: 'DM Sans', sans-serif;
+body {
+  font-family: "DM Sans", sans-serif;
 }
 @media (max-width: 500px) {
-  #tradingview_chart > div{
+  #tradingview_chart > div {
     height: 55vh !important;
   }
 }
 @media (min-width: 500px) {
-  #tradingview_chart > div{
+  #tradingview_chart > div {
     height: 60vh !important;
     min-height: 500px !important;
   }
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+}
+*:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+} /* Tailwind with custom CSS */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  /* transition: scrollbar-color 0.3s ease; */
+}
+*:hover {
+  scrollbar-color: rgba(0, 0, 0, 0.3) transparent;
 }
